# fr3q

./: .gitignore  LICENSE  README.md
crypto/: Cargo.toml
crypto/src/: dratchet.rs  lib.rs  storage.rs
src/: fr3q.py  fr3qserver.py
src/core/: bootstrap.py  engine.py  network.py
src/ui/: app.py  input.py  screens.py
