[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[lib]
name = "crypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
x25519-dalek = { version = "2.0", features = ["static_secrets","serde"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
bincode = "1.3"
argon2 = { version = "0.5", features = ["std"] }
hex = "0.4.3"
zeroize = { version = "1.8", features = ["derive", "serde"] }
tempfile = "3.25.0"
